--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <html>
 
 <body>
-    <canvas id="canvas"></canvas>
+    <div id="app">
+        <div class="map">
+            <h1>Teillery</h1>
+        </div>
+        <div id="infos">
+            <h1>Nom</h1>
+        </div>
+        <canvas id="canvas"></canvas>
+    </div>
     <script src="./index.js"></script>
     <link rel="stylesheet" href="./src/scss/main.scss" />
 </body>
