--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
+<!DOCTYPE html>
 <html>
 
+<head>
+	<title>Parcel Sandbox</title>
+	<meta charset="UTF-8" />
+</head>
+
 <body>
-    <div id="app">
-        <div class="map">
-            <h1>Teillery</h1>
-        </div>
-        <div id="infos">
-            <h1>Nom</h1>
-        </div>
-        <canvas id="canvas"></canvas>
-    </div>
-    <script src="./index.js"></script>
-    <link rel="stylesheet" href="./src/scss/main.scss" />
+	<div id="app">
+		<div class="map">
+			<h1>Teillery</h1>
+		</div>
+		<div id="infos">
+			<h1>Nom</h1>
+		</div>
+	</div>
+	<canvas id="canvas"></canvas>
+
+	<script src="src/index.js"></script>
 </body>
 
 </html>
